# HW_13_django

./: .gitignore  pyproject.toml
quotes_site/quotes_site/: settings.py
